ndb - bug#47375 - don't expose new table definition until commit, and reenable martins testcase